# sam-3d-objects

./: pyproject.toml  requirements.inference.txt  requirements.txt
doc/: setup.md
notebook/: demo_multi_object.ipynb  inference.py  mesh_alignment.py
sam3d_objects/data/: utils.py
sam3d_objects/model/backbone/tdfy_dit/representations/mesh/flexicubes/: flexicubes.py
