[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sam3d_objects"
version = "0.0.1"
requires-python = ">=3.11,<3.12"
dependencies = [
  "easydict==1.13",
  "einops-exts==0.0.4",
  "hydra-core==1.3.2",
  "hydra-submitit-launcher==1.2.0",
  "igraph==0.11.8",
  "lightning==2.6.0",
  "loguru==0.7.2",
  "nvidia-cuda-nvcc-cu12>=12.6.77",
  "open3d==0.18.0",
  "opencv-python==4.12.0.88",
  "optree==0.14.1",
  "pymeshfix==0.17.0",
  "scikit-image==0.23.1",
  "spconv-cu129==2.3.8",
  "tensorboard==2.16.2",
  "timm==1.0.17",
  "torch==2.9.1+cu129",
  "xatlas==0.0.11",
  "xformers==0.0.33",
  "gradio==5.49.0",
  "gsplat @ git+https://github.com/nerfstudio-project/gsplat.git@2323de5905d5e90e035f792fe65bad0fedd413e7",
  "kaolin==0.18.0",
  "seaborn==0.13.2",
  "flash_attn==2.8.3",
  "pytorch3d==0.7.9",
  "MoGe @ git+https://github.com/microsoft/MoGe.git@a8c37341bc0325ca99b9d57981cc3bb2bd3e255b",
]

[tool.hatch.build]
ignore-vcs = true
include = ["**/*.py"]
exclude = ["conftest.py", "*_test.py"]
packages = ["sam3d_objects"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv]
extra-index-url = [
  "https://pypi.ngc.nvidia.com",
  "https://download.pytorch.org/whl/cu129",
]
find-links = ["https://nvidia-kaolin.s3.us-east-2.amazonaws.com/torch-2.9.1_cu129.html"]
index-strategy = "unsafe-best-match"

[tool.uv.extra-build-dependencies]
flash-attn = ["torch==2.9.1+cu129"]
gsplat = ["torch==2.9.1+cu129"]
pytorch3d = ["torch==2.9.1+cu129", "numpy"]
